pydeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pythondzone-dc
  labels:
    app: pythondzone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pythondzone
        updateTimestamp: "__TIMESTAMP__"
    spec:
      containers:
      - name: pythondzone-ctr
        image: >-
          __IMAGE__
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 8000
