pythonservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pythondzone
    updateTimestamp: "__TIMESTAMP__"
  name: pythondzone-svc
spec:
  ports:
    - name: http-port
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: pythondzone
  sessionAffinity: None
  type: NodePort
