pythoningress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: pythondzone
    updateTimestamp: "__TIMESTAMP__"
  name: pythondzone-ingress
spec:
  backend:
    serviceName: pythondzone
    servicePort: http-port
